--- a/minigame.html
+++ b/minigame.html
@@ -13,9 +13,9 @@
     <img src="wifi-icon.png" class="nav-trigger" onclick="toggleNav()" alt="Menu">
 
     <nav id="sideNav">
-        <a href="#home" onclick="toggleNav()">Home</a>
+        <a href="index.html" onclick="toggleNav()">Home</a>
         <a href="history.html" onclick="toggleNav()">History</a>
-        <a href="minigame.html" onclick="toggleNav()">Minigame</a>
+        <a href="#minigame" onclick="toggleNav()">Minigame</a>
     </nav>
 
     <header>
@@ -30,16 +30,14 @@
     </header>
 
     <main>
-        <section id="home" class="hero">
-            <div>
-                <h2 style="font-family: 'Starborn';">A Cozy Project</h2>
-                <p>This site is dedicated to showcasing a cozy pixel-art adventure game in development. It
-                    highlights concept art, characters, and the inspiration behind the project. </p>
+
+        <hr>
+        <section id="minigame">
+            <h2>The Workshop</h2>
+            <div class="minigame-placeholder">
+                <p><em>minigame</p>
             </div>
-            <img src="images/grandma_knitting.jpg" alt="Grandma and Cats" style="border: 5px solid var(--accent-2);">
         </section>
-
-
     </main>
 
 
