update nav on history page

--- a/history.html
+++ b/history.html
@@ -9,12 +9,6 @@
 <body>
     <img src="wifi-icon.png" class="nav-trigger" onclick="toggleNav()" alt="Menu">
 
-    <nav id="sideNav">
-        <a href="#home" onclick="toggleNav()">Home</a>
-        <a href="#history" onclick="toggleNav()">History</a>
-        <a href="#minigame" onclick="toggleNav()">Minigame</a>
-    </nav>
-
     <header>
         <div class="logo-container">
             <img src="images/logo.png" alt="Pixel Computer" class="header-logo"> <svg viewBox="0 0 450 120">
@@ -24,6 +18,11 @@
                 </text>
             </svg>
         </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="history.html">History</a>
+            <a href="minigame.html">Minigame</a>
+        </nav>
     </header>
      <main>
         <h1>History</h1>
