--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <img src="wifi-icon.png" class="nav-trigger" onclick="toggleNav()" alt="Menu">
+    <img src="images/wifi-icon.png" class="nav-trigger" onclick="toggleNav()" alt="Menu">
 
     <nav id="sideNav">
         <a href="#home" onclick="toggleNav()">Home</a>
@@ -20,9 +20,12 @@
 
     <header>
         <div class="logo-container">
-            <img src="images/logo.png" alt="Pixel Computer" class="header-logo"> <svg viewBox="0 0 450 120">
-                <path id="textPath" d="M 10,90 C 100,20 300,20 440,90" fill="transparent" />
-                <text class="spline-text">
+            <img src="images/logo.png" alt="Pixel Computer" class="header-logo">
+            <svg viewBox="0 0 450 120">
+                <path id="textPath" d="M 20,90 C 100,0 300,150 350,60" stroke="black" fill="transparent"
+                    stroke-width="3" />
+
+                <text class="spline-text" dy="-10">
                     <textPath href="#textPath">Grandma's Wi-Fi</textPath>
                 </text>
             </svg>
